common-applications/test-environment/datastat-manage/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: datastat-manage
  name: datastat-manage
