common-applications/test-environment/datastat-manage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: datastat-manage
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: website
  type: ClusterIP
