common-applications/test-environment/datastat-manage/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: website-ingress
  namespace: datastat-manage
spec:
  tls:
    - hosts:
      - datastat.test.osinfra.cn
      secretName: website-tls
  rules:
    - host: datastat.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: website-service
            servicePort: 80
          path: /
